--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/reductio/1.0.0/reductio.min.js"></script>
 <!--Plugin JavaScript file-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
-<script src="http://d3js.org/topojson.v2.min.js"></script>
+<script src="https://d3js.org/topojson.v2.min.js"></script>
 
 <!-- <script src="https://d3js.org/d3-array.v1.min.js"></script> -->
 <script src="https://d3js.org/d3-geo.v1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Turf.js/5.1.5/turf.min.js"></script>
 <!-- <script src="https://unpkg.com/d3-scale-cluster@1.1.2/dist/d3-scale-cluster.min.js"></script> -->
-<script src="http://d3-legend.susielu.com/d3-legend.min.js"></script>
+<script src="https://d3-legend.susielu.com/d3-legend.min.js"></script>
 
 
 <script>
