--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Promise.all([
 
             var day = new Date(data[start].date);
             date = day.toDateString().split(" ")
-            date = date[2] + "-" + date[1] + "-" + date[3]
+            date = date[2] + " " + date[1] + " " + date[3]
             if (new Date(date) <= new Date('2020-03-14')) {
                 conf = parseInt(data[co]['totalconfirmed']);
                 recov = parseInt(data[co]['totalrecovered']);
@@ -917,7 +917,7 @@ function stateline_chart(data) {
         () => ({})
     );
 
-     console.log(data);
+     // console.log(data);
     const states = data[0].statewise.map(d => d.state);
 
     var dateList = data.map(function(el) {
