--- a/index.html
+++ b/index.html
@@ -248,34 +248,34 @@ function plot_gender_pie(type) {
 }
 
 Promise.all([
-        d3.json("https://api.covid19india.org/data.json"),
+        d3.json("https://data.covid19india.org/data.json"),
         d3.json("https://api.rootnet.in/covid19-in/unofficial/covid19india.org/statewise/history"),
-        d3.json("https://api.covid19india.org/raw_data1.json"),
-        d3.json("https://api.covid19india.org/raw_data2.json"),
-        d3.json("https://api.covid19india.org/raw_data3.json"),
-        d3.json("https://api.covid19india.org/raw_data4.json"),
-        d3.json("https://api.covid19india.org/raw_data5.json"),
-        d3.json("https://api.covid19india.org/raw_data6.json"),
-        d3.json("https://api.covid19india.org/raw_data7.json"),
-        d3.json("https://api.covid19india.org/raw_data8.json"),
-        d3.json("https://api.covid19india.org/raw_data9.json"),
-        d3.json("https://api.covid19india.org/raw_data10.json"),
-        d3.json("https://api.covid19india.org/raw_data11.json"),
-        d3.json("https://api.covid19india.org/raw_data12.json"),
-        d3.json("https://api.covid19india.org/raw_data13.json"),
-        d3.json("https://api.covid19india.org/raw_data14.json"),
-        d3.json("https://api.covid19india.org/raw_data15.json"),
-        d3.json("https://api.covid19india.org/raw_data16.json"),
-        d3.json("https://api.covid19india.org/raw_data17.json"),
-        d3.json("https://api.covid19india.org/raw_data18.json"),
-        d3.json("https://api.covid19india.org/raw_data19.json"),
-        d3.json("https://api.covid19india.org/raw_data20.json"),
-        d3.json("https://api.covid19india.org/raw_data21.json"),
-        d3.json("https://api.covid19india.org/raw_data22.json"),
-        d3.json("https://api.covid19india.org/raw_data23.json"),
-        d3.json("https://api.covid19india.org/raw_data24.json"),
-        d3.json("https://api.covid19india.org/raw_data25.json"),
-        d3.json("https://api.covid19india.org/raw_data26.json")
+        d3.json("https://data.covid19india.org/raw_data1.json"),
+        d3.json("https://data.covid19india.org/raw_data2.json"),
+        d3.json("https://data.covid19india.org/raw_data3.json"),
+        d3.json("https://data.covid19india.org/raw_data4.json"),
+        d3.json("https://data.covid19india.org/raw_data5.json"),
+        d3.json("https://data.covid19india.org/raw_data6.json"),
+        d3.json("https://data.covid19india.org/raw_data7.json"),
+        d3.json("https://data.covid19india.org/raw_data8.json"),
+        d3.json("https://data.covid19india.org/raw_data9.json"),
+        d3.json("https://data.covid19india.org/raw_data10.json"),
+        d3.json("https://data.covid19india.org/raw_data11.json"),
+        d3.json("https://data.covid19india.org/raw_data12.json"),
+        d3.json("https://data.covid19india.org/raw_data13.json"),
+        d3.json("https://data.covid19india.org/raw_data14.json"),
+        d3.json("https://data.covid19india.org/raw_data15.json"),
+        d3.json("https://data.covid19india.org/raw_data16.json"),
+        d3.json("https://data.covid19india.org/raw_data17.json"),
+        d3.json("https://data.covid19india.org/raw_data18.json"),
+        d3.json("https://data.covid19india.org/raw_data19.json"),
+        d3.json("https://data.covid19india.org/raw_data20.json"),
+        d3.json("https://data.covid19india.org/raw_data21.json"),
+        d3.json("https://data.covid19india.org/raw_data22.json"),
+        d3.json("https://data.covid19india.org/raw_data23.json"),
+        d3.json("https://data.covid19india.org/raw_data24.json"),
+        d3.json("https://data.covid19india.org/raw_data25.json"),
+        d3.json("https://data.covid19india.org/raw_data26.json")
     ]).then(([data1, data2, p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14, p15, p16, p17, p18, p19, p20, p21, p22, p23, p24, p25, p26]) => {
         var data = data1.cases_time_series;
 
