--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ Promise.all([
         d3.json("https://data.covid19india.org/raw_data26.json")
     ]).then(([data1, data2, p1, p2, p3, p4, p5, p6, p7, p8, p9, p10, p11, p12, p13, p14, p15, p16, p17, p18, p19, p20, p21, p22, p23, p24, p25, p26]) => {
         var data = data1.cases_time_series;
-        console.log("====>data:", data)
+        // console.log("====>data:", data)
 
         var from = new Date(2020, 0, 31);
         var to = new Date('23 Jul 2021');
@@ -331,9 +331,9 @@ Promise.all([
             } else {
 
                 data_add = data2.data.history[co - count + 1];
-                if (typeof data_add === 'undefined'){
-                 break
-                }
+                // if (typeof data_add === 'undefined'){
+                //  break
+                // }
                 console.log("====>", data_add)
                 if (data_add == null) continue
                 conf = parseInt(data_add['total'].confirmed);
@@ -422,7 +422,7 @@ Promise.all([
             onChange: saveResult,
             onFinish: saveResult,
         });
-        console.log("startDate:", startDate, "==>", endDate);
+        // console.log("startDate:", startDate, "==>", endDate);
 
         data = data.filter(function(d) {
             return filterData(d.day, dateToTS(startDate), dateToTS(endDate), false);
@@ -784,7 +784,7 @@ function stateline_chart(data) {
 
     cf = crossfilter(data); // Main crossfilter object
     var cases_bar_d = cf.dimension(function(d) {
-        return new Date('23 Jul 2021');
+        return new Date(d.day);
     });
 
     var daily_cases_bar_g = cases_bar_d.group().reduce(
@@ -926,8 +926,7 @@ function stateline_chart(data) {
     const states = data[0].statewise.map(d => d.state);
 
     var dateList = data.map(function(el) {
-        return new Date('23 Jul 2021');
-        // return new Date(el.day);
+        return new Date(el.day);
     });
     var latest_data = data[data.length - 1];
     var top_states = latest_data.statewise;
@@ -1747,8 +1746,8 @@ function stateline_chart(data) {
             'dailydeaths': '#36484f'
         };
         composite2
-            .width(null)
-            .height(null)
+            .width("30")
+            .height("30")
             .x(d3.scaleTime().domain([new Date('15 Mar 2020'), eDate]))
             .margins({
                 left: 60,
